Fix some alignment issue from font-family update

--- a/src/app/components/roast-summary/roast-summary.component.scss
+++ b/src/app/components/roast-summary/roast-summary.component.scss
@@ -5,12 +5,17 @@
 .origin-details {
   display: flex;
   flex-direction: row;
+  align-items: center;
+
+  p {
+    margin: 0;
+  }
+
+  .globe-icon {
+    margin-right: 0.5rem;
+  }
 }
 
-.globe-icon {
-  align-self: center;
-  margin-right: 0.5rem;
-}
 
 // 1024px and smaller
 @media (max-width: 1024px) {
